Fix infinite loop in reports

The exchange algorithm for the total rows always kept exchanging the
last two entries with themselves and never ended. This is caused by
totals for multiple currencies.

This change detects this scenario and avoids the infinite loop.

BUG: 430178
FIXED-IN: 5.1.1